--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./css/index.min.css" />
-        <title>Сахарок</title>
-    </head>
-    <body>
-        <main class="wrapper">
-            <section class="welcome">
-                <h1 class="welcome__title">
-                    Здравствуй, я
-                    <span>Саша Ковальски</span>
-                </h1>
-                <p class="welcome__description">
-                    Я начинающая веб-дизайнерка. Мне нужен опыт, поэтому
-                    предлагаю вам свою работу почти за бесплатно. Ваш сайт
-                    станет частью моего портфолио, от чего ваш сайт только
-                    выиграет, ведь мне нужно крутое портфолио. Напишите мне в
-                    одну из соц. сетей, чтобы обсудить ваш проект:
-                </p>
-                <div class="links">
-                    <button class="links__btn links__btn--vk">ВКонтакте</button>
-                    <button class="links__btn links__btn--mail-ru">
-                        Mail.ru
-                    </button>
-                    <button class="links__btn links__btn--inst">
-                        Instagram
-                    </button>
-                </div>
-            </section>
-            <img class="avatar" src="./img/avatar.png" />
-        </main>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/index.min.css" />
+    <title>Сахарок</title>
+  </head>
+  <body>
+    <main class="wrapper">
+      <section class="welcome">
+        <h1 class="welcome__title">
+          Здравствуй, я
+          <span>Саша Ковальски</span>
+        </h1>
+        <p class="welcome__description">
+          Я начинающая веб-дизайнерка. Мне нужен опыт, поэтому предлагаю вам
+          свою работу почти за бесплатно. Ваш сайт станет частью моего
+          портфолио, от чего ваш сайт только выиграет, ведь мне нужно крутое
+          портфолио. Напишите мне в одну из соц. сетей, чтобы обсудить ваш
+          проект:
+        </p>
+        <div class="links">
+          <button class="links__btn links__btn--vk">ВКонтакте</button>
+          <button class="links__btn links__btn--mail-ru">Mail.ru</button>
+          <button class="links__btn links__btn--inst">Instagram</button>
+        </div>
+      </section>
+      <img class="avatar" src="./img/avatar.png" />
+    </main>
+  </body>
 </html>
