--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <button class="links__btn links__btn--inst">Instagram</button>
         </div>
       </section>
-      <img class="avatar" src="./img/avatar.png" />
+      <img class="avatar" src="./img/avatar.jpg" />
     </main>
   </body>
 </html>
