Add simple preloader

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.min.css" />
+    <script src="./js/script.js"></script>
     <title>Сахарок</title>
   </head>
   <body>
+    <div class="preloader" id="preloader">
+      <div class="preloader__el" id="preloader__el">
+        <span>С</span>
+        <span>А</span>
+        <span>Х</span>
+        <span>А</span>
+        <span>R</span>
+      </div>
+    </div>
     <main class="wrapper">
       <section class="welcome">
         <h1 class="welcome__title">
