--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.min.css" />
-    <script src="./js/script.js"></script>
-    <title>Сахарок</title>
+    <script src="./js/bundle.js"></script>
+    <title>Веб-дизайнерка | Саша Ковальски</title>
   </head>
   <body>
     <div class="preloader" id="preloader">
